<resources>
    <string name="app_name">OUR VEDIK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="our_vedikk">OUR VEDIK</string>
    <string name="sign_up">SIGN UP</string>
    <string name="logina">LOGIN</string>
    <string name="login">LOGIN</string>
    <string name="registration">Registration</string>
    <string name="emailn">EMAIL</string>
    <string name="passwordd">PASSWORD</string>
    <string name="signup">SIGN UP</string>
    <string name="welcome">WELCOME!</string>
    <string name="om_bhur_bhuvah_svah_tat_savitur_varenyam_bhargo_devasya_dhimahi_dhiyo_yonah_prachodayat">Om bhur bhuvah svah Tat savitur varenyam Bhargo devasya dhimahi Dhiyo yonah prachodayat</string>
    <string name="our">OUR VEDIK</string>
    <string name="let_s_go">LET\'S GO!</string>
    <string name="name1">NAME</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="passworda">PASSWORD</string>
    <string name="loginn">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="dont_have_an_account1">Dont Have an Account?</string>
    <string name="dont_have_an_account">Dont Have an Account?</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_provide_the_otp_in_order_to_check_your_content">please provide the OTP in order to check your content</string>
    <string name="next">NEXT</string>
    <string name="homee">HOME</string>
    <string name="services">SERVICES</string>
    <string name="become_partner">BECOME PARTNER</string>
    <string name="contact_us">CONTACT US</string>
    <string name="about_us">ABOUT US</string>
    <string name="hhome">Home</string>
    <string name="password">PASSWORD</string>
    <string name="remember">Remember</string>
    <string name="signupp">Signup</string>
    <string name="logino">Login</string>
    <string name="toddo">TODO</string>
    <string name="about_uss">About Us</string>
    <string name="contact_now">Contact Now</string>
    <string name="guidee">Guide</string>
    <string name="guide">Guide</string>
    <string name="astrology">Astrology</string>
    <string name="cab_service">Cab Service</string>
    <string name="our_vedik">OUR VEDIK</string>
    <string name="hire_a_pandit">Hire a Pandit</string>
    <string name="trustie">Trustie</string>
    <string name="toodo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todoo">TODO</string>
</resources>