<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/vedik"/>
    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="50sp"
        android:layout_centerHorizontal="true"
        android:textColor="#b71c1c"
        android:paddingVertical="10dp"
        android:padding="20sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="266dp"
        android:layout_height="61dp"
        android:layout_below="@+id/registration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:hint="@string/name"
        android:textSize="20sp"
        android:padding="20dp"
        android:textStyle="bold"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_border"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="266dp"
        android:layout_height="61dp"
        android:layout_below="@+id/name"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:background="@drawable/edit_text_border"
        android:padding="20dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="266dp"
        android:layout_height="61dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_border"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:background="@drawable/button_border"
        android:text="@string/signup"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/already"
        android:layout_width="197dp"
        android:layout_height="38dp"
        android:layout_below="@id/signup"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="20sp"
        android:text="@string/already_have_an_account"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="15sp" />

    <EditText
        android:layout_width="63dp"
        android:layout_height="56dp"
        android:layout_below="@+id/signup"
        android:layout_marginStart="-8dp"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="9dp"
        android:layout_toEndOf="@+id/already"
        android:layout_toRightOf="@+id/already"
        android:text="@string/loginn"
        android:textColor="#d50000"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:paddingVertical="80dp"
        android:paddingHorizontal="30dp"/>












</RelativeLayout>