<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeb3b"
    tools:context=".end">
    <EditText
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homee"
        android:textColor="#dd2c00"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="80sp"
        android:padding="20dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:textColor="#dd2c00"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/first"
        android:layout_marginTop="30sp"
        android:padding="20dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/become"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/become_partner"
        android:textColor="#dd2c00"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/services"
        android:layout_marginTop="30sp"
        android:padding="20dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textColor="#dd2c00"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/become"
        android:layout_marginTop="30sp"
        android:padding="20dp"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textColor="#dd2c00"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/contact"
        android:layout_marginTop="30sp"
        android:padding="0mm"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/exit"
        android:contentDescription="TODO"
        android:layout_alignParentEnd="true" />







</RelativeLayout>