<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/vedik">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textColor="#b71c1c"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/OmBhur"
        android:layout_width="270dp"
        android:layout_height="156dp"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/om_bhur_bhuvah_svah_tat_savitur_varenyam_bhargo_devasya_dhimahi_dhiyo_yonah_prachodayat"
        android:textColor="#f44336"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/Vedik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/our_vedik"
        android:layout_below="@+id/OmBhur"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textColor="#d50000"
        android:textStyle="bold"
        android:shadowColor="#263238"/>

    <Button
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Vedik"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_border"
        android:padding="20dp"
        android:text="@string/let_s_go"
        android:textSize="20sp"
        android:textColor="#ffffff" />













    




</RelativeLayout>