<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterOTP">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/vedik"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:paddingVertical="40dp"
        android:paddingLeft="20dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/Eotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:padding="10dp"
        android:textColor="#b71c1c"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"/>
    <TextView
        android:id="@+id/please"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_provide_the_otp_in_order_to_check_your_content"
        android:layout_below="@+id/Eotp"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#9e9e9e"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:paddingRight="25dp"
        android:paddingLeft="25dp"
        android:orientation="horizontal">
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_border"
            android:focusable="true"
            android:padding="10dp"
            android:inputType="number"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:maxLength="1"
            android:textColor="#000000"
            android:autofillHints="" />
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_border"
            android:focusable="true"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_border"
            android:focusable="true"
            android:padding="10dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_border"
            android:focusable="true"
            android:padding="10dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_border"
            android:focusable="true"
            android:padding="10dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"/>
        <EditText
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/edit_text_border"
            android:focusable="true"
            android:padding="10dp"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#000000"/>



    </LinearLayout>

    <Button
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:text="@string/next"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#ffffff" />











</RelativeLayout>